# trade_cockpit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SESSION-HANDOFF.md  claude-progress.txt  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  test_translate_news.py
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/layouts/: cockpit.json  workbench.json
backend/tests/: conftest.py  test_action_service.py  test_actions_router.py  test_ai_core_modules_f208b.py  test_ai_gateway_e2e_f208c.py  test_ai_memo_schema_f208a.py  test_ai_routing_overrides.py  test_ai_schemas_f209.py  test_ai_schemas_f210a.py  test_ai_schemas_f211a1.py  test_ai_schemas_f213a.py  test_capitulation_reversal.py  test_chart_f203a.py  test_cockpit_chart_weekly_router.py  test_cockpit_pool_router.py  test_config.py  test_daily_bar_repository.py  test_data_api.py  test_data_refresh_service.py  test_decision_f203b2.py  test_decision_f215b.py  test_decision_f217c1.py  test_earnings_f204a.py  test_earnings_f204b.py  test_f215a.py  test_f218_d3a_key_metrics.py  test_f218_d6a_fundamentals.py  test_f218_d7a_repricing_cron.py  test_f218_d7a_repricing_router.py  test_f221_refresh_visibility.py  test_fmp_client.py  test_fmp_live_smoke.py  test_indicators_macd_f219a.py  test_journal_api.py  test_journal_review_service_f211d1.py  test_journal_review_service_f211d2.py  test_logs_api.py  test_market_api.py  test_market_refresh.py  test_market_scan_repositories.py  (+45 more)
(+572 files in other folders)
