[project]
name = "ma150-tracker-backend"
version = "2.8.0"
description = "MA150 Tracker backend — FastAPI + SQLAlchemy + SQLite"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "massive>=2.5.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27.0",
    "litellm>=1.83,<2.0",
    "numpy>=2.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: hits real FMP /stable/ endpoints; requires FMP_API_KEY; skipped by default",
]
addopts = "-m 'not live'"

[tool.uv]
package = false
